--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-es2015": "^6.9.0",
     "html-minifier": "^3.1.0",
     "vue": "^2.0.3",
-    "vue-server-renderer": "^2.0.3"
+    "vue-server-renderer": "^2.0.3",
+    "xss": "^0.2.16"
   }
 }
